<resources>
    <string name="app_name">Enigma Machine</string>
    <string name="encrypt">Encrypt</string>
    <string name="encrypt_activity">Encryption</string>
    <string name="encryption_activity">Encryption</string>
    <string name="machine_type">Machine Type:</string>
    <string name="reflector">Reflector:</string>
    <string name="wheel_order">Wheel Order:</string>
    <string name="ring_settings">Ring Settings:</string>
    <string name="ground_settings">Ground Settings:</string>
    <string name="save">SAVE</string>
    <string name="plugboard_setting">Plugboard setting</string>
    <string name="plugboard">Plugboard:</string>
    <string name="input_text">Input text</string>
    <string name="input">Input</string>
    <string name="output">Output</string>
    <string name="about_enigma">About Enigma</string>
    <string name="feedback">Feedback</string>
    <string-array name="reflector_array">
        <item>B</item>
        <item>C</item>
    </string-array>
    <string-array name="rotor_array">
        <item>I</item>
        <item>II</item>
        <item>III</item>
        <item>IV</item>
        <item>V</item>
        <item>VI</item>
        <item>VII</item>
        <item>VIII</item>
    </string-array>
    <string-array name="alphabet_array">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
</resources>
